added subcategories to each category. updated some minor mistakes.

--- a/public/businessPages/glamourevents.html
+++ b/public/businessPages/glamourevents.html
@@ -98,6 +98,15 @@
                     </div>
 
                     <br>
+                    <!-- * Email button -->
+                    <div businessLinkPic>
+                        <img src="/images/email-icon.png" class="linkLogosPage" />
+                        <div class="businessLinkText">
+                            <a href="mailto:glam2events@yahoo.com" class="businessLinks"><p id="informationTextLinks">Email Glamour Events</p></a>
+                        </div>
+                    </div>
+
+                    <br>
                     <!-- * Business Address -->
                     <div class="businessLinkPic">
                         <img src="/images/pin-icon.png" class="linkLogos" />
