--- a/public/businessPages/nancyjohnsgallery.html
+++ b/public/businessPages/nancyjohnsgallery.html
@@ -98,6 +98,15 @@
                                     class="businessLinks">@nancyjohnsgallery</a></p>
                         </div>
                     </div>
+                    
+                    <br>
+                    <!-- * Email button -->
+                    <div businessLinkPic>
+                        <img src="/images/email-icon.png" class="linkLogosPage" />
+                        <div class="businessLinkText">
+                            <a href="mailto:nancy@nancyjohns.com" class="businessLinks"><p id="informationTextLinks">Email Nancy Johns Gallery</p></a>
+                        </div>
+                    </div>
 
                     <br>
                     <!-- * Business Address -->
