--- a/public/contactus.html
+++ b/public/contactus.html
@@ -81,7 +81,7 @@
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="Business Phone Number (Will be public)" id="phoneNumber" type="text" name="phoneNumber"
+                            <input placeholder="Business Phone Number" id="phoneNumber" type="text" name="phoneNumber"
                                 class="form-control"/>
                         </div>
                     </div>
@@ -95,9 +95,10 @@
                             <select placeholder="Share Your Information?" id="privacyCheck" name="privacyCheck" class="form-control"
                             required>
                             <option>Share Your Email and Phone Number? *</option>
-                            <option>Yes (Publicize both)</option>
+                            <option>Yes (Post both on Wertigo)</option>
                             <option>Email only</option>
                             <option>Phone Number only</option>
+                            <option>None (Do not post either publicly on Wertigo)</option>
                         </select>
                         </div>
                     </div>
@@ -118,17 +119,22 @@
                                 required>
                                 <option>-Select a Business Category- *</option>
                                 <option>Restaurant</option>
-                                <option>Beauty</option>
+                                <option>Food (Other)</option>
+                                <option>Bar</option>
+                                <option>Health & Wellness</option>
                                 <option>Shopping</option>
                                 <option>Accessories</option>
+                                <option>Events</option>
                                 <option>Entertainment</option>
-                                <option>Other (please specify)</option>
+                                <option>Automotive</option>
+                                <option>Contractors</option>
+                                <option>Other (please specify in textbox below)</option>
                             </select>
                         </div>
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <input placeholder="Subcategory (ex: Cafe, Gifts, Nails, etc.)" id="businessSubcategory"
+                            <input placeholder="Subcategories (ex: Cafe, Gifts, Nails, etc.)" id="businessSubcategory"
                                 name="businessSubcategory" type="text" class="form-control"/>
                         </div>
                     </div>
