testing the file attachment button with nodemailer

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -180,6 +180,27 @@
                         </div>
                     </div>
                 </div>
+
+                <br>
+                <!-- * File Upload button -->
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <form>
+                                <div class="form-group">
+                                <!-- 
+                                  <label for="exampleFormControlFile1">Upload Business Logo (.jpg or .png)</label>
+                                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                                    -->
+                                  <label class="form-label" for="customFile">Upload Business Logo (.jpg or .png)</label>
+                                  <input type="file" class="form-control" id="customFile" />
+                                </div>
+                              </form>
+                              <br>
+                        </div>
+                    </div>
+                </div>
+
                 <br>
                 <div class="form-group">
                     <textarea placeholder="Have other information to let us know? Leave your message here. Address is only required if you have a physical storefront." id="message"
