updated contact form wording

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -117,7 +117,7 @@
                         <div class="col-md-4">
                             <select placeholder="Business Category" id="category" name="category" class="form-control"
                                 required>
-                                <option>-Select a Business Category- *</option>
+                                <option>Select a Business Category *</option>
                                 <option>Restaurant</option>
                                 <option>Food (Other)</option>
                                 <option>Bar</option>
@@ -165,6 +165,7 @@
                 <!-- Row 4 of Form 1 -->
                 <div class="form-group">
                     <div class="row">
+                        <p>Address is only required if you have a physical storefront.</p>
                         <div class="col-md-4">
                             <input placeholder="Address" id="address" name="address" type="text" class="form-control"/>
                         </div>
@@ -181,12 +182,11 @@
                     </div>
                 </div>
 
-                <br>
                
 
                 <br>
                 <div class="form-group">
-                    <textarea placeholder="Have other information to let us know? Leave your message here. Address is only required if you have a physical storefront." id="message"
+                    <textarea placeholder="Have other information (ex: business hours) to let us know? Leave your message here." id="message"
                         name="message" class="form-control" rows="3"></textarea>
                 </div>
                 <br>
