temporarily hid upload image section

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -182,12 +182,13 @@
                     </div>
                 </div>
 
-                <!-- ! TEST ATTACHMENTS -->
+                <!-- ! TEST ATTACHMENTS 
                 <br>
                 <div class="form-group">
                     <label for="businessLogoFile">Attach your business logo (.jpg or .png)</label>
                     <input type="file" class="form-control-file" id="businessLogoFile" name="logoImage">
                 </div>
+                -->
 
                 <!-- * Message section -->
                 <br>
