--- a/public/contactus.html
+++ b/public/contactus.html
@@ -115,7 +115,7 @@
                         <br>
                         <br>
                         <div class="col-md-4">
-                            <select placeholder="Business Category" id="category" name="category" class="form-control"
+                            <select placeholder="Business Category" id="category" name="businessCategory" class="form-control"
                                 required>
                                 <option>Select a Business Category *</option>
                                 <option>Restaurant</option>
@@ -182,12 +182,12 @@
                     </div>
                 </div>
 
-                <!-- ! TEST ATTACHMENTS 
+                <!-- ! TEST ATTACHMENTS -->
                 <br>
                 <div class="form-group">
                     <label for="businessLogoFile">Attach your business logo (.jpg or .png)</label>
                     <input type="file" class="form-control-file" id="businessLogoFile" name="logoImage">
-                </div> -->
+                </div>
 
                 <!-- * Message section -->
                 <br>
@@ -217,17 +217,17 @@
         
         <!-- Contact form for other people to nominate local businesses -->
         <div class="row justify-content-center">
-            <form class="customer-contact-form" method="POST" action="send" enctype="multipart/form-data">
+            <form class="customer-contact-form" method="POST" action="/contactus" enctype="multipart/form-data">
                 <div class="form-group">
                     <!-- Row 1 of Form 2 -->
                     <div class="row">
                         <div class="col-md-6">
-                            <input placeholder="Full Name*" id="customerName" name="name" type="text" class="form-control" required />
+                            <input placeholder="Full Name*" id="customerName" name="customerName" type="text" class="form-control" required />
                         </div>
                         <br>
                         <br>
                         <div class="col-md-6">
-                            <input placeholder="Email*" id="customerEmail" type="email" name="email" class="form-control"
+                            <input placeholder="Email*" id="customerEmail" type="email" name="customerEmail" class="form-control"
                                 aria-describedby="emailHelp" required />
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                 <br>
                 <!-- Row 2 of Form 2 -->
                 <div class="form-group">
-                    <input placeholder="Business Name to Recommend*" id="customerbusinessName" name="businessName" type="text" class="form-control"
+                    <input placeholder="Business Name to Recommend*" id="customerbusinessName" name="customerbusinessName" type="text" class="form-control"
                         required />
                 </div>
                 <br>
@@ -278,7 +278,7 @@
         crossorigin="anonymous"></script>
 
     <!-- this script will get the client-side function to work -->
-    <script src="/js/app.js"></script>
+    <script src="/js/form.js"></script>
 
 </body>
 
