updated file upload design and added hr tag to separate owner and user contact forms

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -185,8 +185,12 @@
                 <!-- ! TEST ATTACHMENTS -->
                 <br>
                 <div class="form-group">
-                    <label for="businessLogoFile">Attach your business logo (.jpg or .png)</label>
-                    <input type="file" class="form-control-file" id="businessLogoFile" name="logoImage">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <label for="businessLogoFile">Attach your business logo (.jpg or .png)</label>
+                            <input type="file" class="form-control" id="businessLogoFile" name="logoImage">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- * Message section -->
@@ -205,6 +209,7 @@
         </div>
 
         <br>
+        <hr>
         <!-- Start of the next part for people to recommend other places -->
         <div class="row justify-content-center">
             <div class="col">
