updated the link in the expand-menubar to be Add Your Business instead of Contact Us

--- a/public/discover.html
+++ b/public/discover.html
@@ -40,7 +40,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="index.html">Home</a>
                     <a class="nav-link active" aria-current="page" href="discover.html">Discover</a>
-                    <a class="nav-link" href="contactus.html">Contact Us</a>
+                    <a class="nav-link" href="contactus.html">Add Your Business</a>
                     <a class="nav-link" href="faq.html">FAQ</a>
                 </div>
             </div>
