--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                     <a class="nav-link" href="/discover.html">Discover</a>
-                    <a class="nav-link" href="/contactus.html">Contact Us</a>
+                    <a class="nav-link" href="/contactus.html">Add Your Business</a>
                     <a class="nav-link" href="/faq.html">FAQ</a>
                 </div>
             </div>
