changed under construction p-tag on Discover page to link to the contact us page

--- a/public/discover.html
+++ b/public/discover.html
@@ -59,8 +59,7 @@
                 <div class="centeredText">
                     <!-- <h1>Get started on discovering great local businesses!</h1> -->
                     <br>
-                    <p id="UnderConstruction">This page is still under construction! More features to come in the
-                        following weeks.</p>
+                    <p>Want to add your own business? Register <a href="contactus.html" target="_blank" rel="noopener noreferrer">here</a> today!</p>
                 </div>
             </div>
         </div>
