added The Cutting Board Deli. Also undid css changes regarding the footer/body since it made the Filter by Subcategory section look weird

--- a/public/discover.html
+++ b/public/discover.html
@@ -59,7 +59,7 @@
                 <div class="centeredText">
                     <!-- <h1>Get started on discovering great local businesses!</h1> -->
                     <br>
-                    <p>Want to add your own business? Register <a href="contactus.html" target="_blank" rel="noopener noreferrer">here</a> today!</p>
+                    <p><b>Want to add your own business? Register <a href="contactus.html" target="_blank" rel="noopener noreferrer">here</a> today!</b></p>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
                             <p class="filter recentlyadded">Please select a category from above to see subcategory options.</p>
 
                             <p class="filter restaurant italian mexican chinese fastfood none-button">Restaurant</p>
-                            <p class="filter food sauces cafe grocerystore none-button">Food (Other)</p>
+                            <p class="filter food sauces cafe deli grocerystore none-button">Food (Other)</p>
                             <p class="filter bar sportsbar casual highend danceclub none-button">Bar</p>
                             <p class="filter healthandwellness massagetherapy nails eyebrows eyelashes none-button">Health & Wellness</p>
                             <p class="filter shopping art clothing shoes usedgoods none-button">Shopping</p>
@@ -156,7 +156,7 @@
                                 -->
 
                                 <button class="btn btn-secondary category-button filter-button none-button filter restaurant italian mexican chinese fastfood" data-filter="restaurant">None</button>
-                                <button class="btn btn-secondary category-button filter-button none-button filter food cafe sauces grocerystore" data-filter="food">None</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter food cafe deli sauces grocerystore" data-filter="food">None</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter bar sportsbar casual highend danceclub" data-filter="bar">None</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter healthandwellness massagetherapy nails eyebrows eyelashes" data-filter="healthandwellness">None</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter shopping art clothing shoes usedgoods" data-filter="shopping">None</button>
@@ -177,9 +177,10 @@
                                 <button class="btn btn-secondary category-button filter-button none-button filter restaurant italian mexican chinese fastfood" data-filter="fastfood">Fast Food</button>
 
                                 <!-- ! Food Subcategories -->
-                                <button class="btn btn-secondary category-button filter-button none-button filter food grocerystore cafe sauces" data-filter="grocerystore">Grocery Store</button>
-                                <button class="btn btn-secondary category-button filter-button none-button filter food grocerystore cafe sauces" data-filter="cafe">Cafe</button>
-                                <button class="btn btn-secondary category-button filter-button none-button filter food sauces grocerystore cafe" data-filter="sauces">Sauces & Condiments</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter food grocerystore deli cafe sauces" data-filter="grocerystore">Grocery Store</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter food grocerystore deli cafe sauces" data-filter="deli">Deli</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter food grocerystore deli cafe sauces" data-filter="cafe">Cafe</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter food sauces deli grocerystore cafe" data-filter="sauces">Sauces & Condiments</button>
 
                                 <!-- ! Bar Subcategories -->
                                 <button class="btn btn-secondary category-button filter-button none-button filter bar sportsbar casual highend danceclub" data-filter="sportsbar">Sports Bar</button>
@@ -359,6 +360,69 @@
 
                 </div>
                 <!-- ! END of DeMarco's fine foods -->
+
+                <!-- ! START of The Cutting Board Deli -->
+                <div class="col-md-4 border-bottom border-2 item filter food deli recentlyadded">
+                    <!-- * Basic Info -->
+                    <a href="/public/businessPages/thecuttingboardeli.html" class="businessHeaderLink"><h1>The Cutting Board Deli</h1></a>
+                    <h3>Food</h3>
+                    <h4>Deli</h4>
+                    <img class="business_image" src="/images/defaultpicture.jpg" />
+                    <br>
+
+                    <h5><a href="tel:519-979-4406" class="phonenumber">519-979-4406</a></h5>
+                    <!-- * Website Link -->
+                    <div class="businessLinkPic">
+                        <img src="/images/facebook-logo.png" class="linkLogos" />
+                        <div class="businessLinkText">
+                            <p><a href="https://www.facebook.com/thecuttingboarddeli.tecumseh/" target="_blank" rel="noopener noreferrer"
+                                    class="businessLinks">Facebook</a></p>
+                        </div>
+                    </div>
+                    <br>
+
+                    <!-- * Instagram Section -->
+                    <div class="businessLinkPic">
+                        <img src="/images/instagramlogo.png" class="linkLogos" />
+                        <div class="businessLinkText">
+                            <p><a href="https://www.instagram.com/thecuttingboarddeli/" target="_blank"
+                                    rel="noopener noreferrer" class="businessLinks">@thecuttingboarddeli</a></p>
+                        </div>
+                    </div>
+                    <br>
+
+                    <!-- * Business Address -->
+                    <div class="businessLinkPic">
+                        <img src="/images/pin-icon.png" class="linkLogos" />
+                        <div class="businessLinkText">
+                            <p><a href="https://goo.gl/maps/WaHtWQoSxJime4NTA"
+                                    target="_blank" rel="noopener noreferrer" class="businessLinks">14301 Tecumseh Rd E, Windsor, ON N8N 1M3</a></p>
+                        </div>
+                    </div>
+
+                    <!-- * Description Collapse Button -->
+                    <div class="collapseButtonSection">
+                        <button class="btn btn-primary collapseButton" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#thecuttingboarddeli" aria-expanded="false" aria-controls="thecuttingboarddeli">
+                            Description & Hours
+                        </button>
+                        <div class="collapse" id="thecuttingboarddeli">
+                            <div class="card card-body">
+                                <p>
+                                    Here at the Cutting Board, quality is our top priority. The perfect offering of handcrafted New-York-style deli sandwiches including turkey, salami, mortadella and pastrami.
+                                    <br><br>
+                                    Sunday: <b>10am to 2pm</b>
+                                    <br>
+                                    Monday: <b>Closed</b>
+                                    <br>
+                                    Tuesday - Saturday: <b>10am to 4pm</b>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                </div>
+                <!-- ! END of BUSINESS NAME HERE -->
 
                 <!-- ! START of Bella Armande Jewelry -->
                 <div class="col-md-4 border-bottom border-2 item filter accessories recentlyadded jewelry">
