added The Barber's In

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -184,7 +184,7 @@
                     </div>
                 </div>
 
-                <!-- ! TEST ATTACHMENTS -->
+                <!-- ! File Upload (for business logo) -->
                 <br>
                 <div class="form-group">
                     <div class="row">
