--- a/public/template-business-object.html
+++ b/public/template-business-object.html
@@ -7,7 +7,9 @@
     <img class="business_image" src="/images/defaultpicture.jpg" />
     <br>
 
+    <!-- * Phone Number(s) -->
     <h5><a href="tel:123-456-7890" class="phonenumber">123-456-7890</a></h5>
+
     <!-- * Website Link -->
     <div class="businessLinkPic">
         <img src="/images/website_logo.png" class="linkLogos" />
