--- a/public/businessPages/thebarbersin.html
+++ b/public/businessPages/thebarbersin.html
@@ -19,7 +19,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
 
-    <title>Manual Therapy Clinic</title>
+    <title>The Barber's In</title>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 
 
     <div class="jumbotron">
-        <h1>Manual Therapy Clinic</h1>
+        <h1>The Barber's In</h1>
         <br>
 
         <!-- * Business Logo -->
@@ -63,30 +63,25 @@
         <div class="row justify-content-center">
             <div class="col">
                 <div class="centeredText">
-                    <div class="block-text">
-                        <!-- * Description Area -->
-                        <p id="informationText">
-                            Online booking available for clinic, by appointment only. In home massage therapy
-                            also available. Inquire within.
-                        </p>
-                    </div>
 
                     <!-- * Category and Subcategory -->
                     <h1>Health & Beauty</h1>
-                    <h2>Massage Therapy</h2>
+                    <h2>Barber Shop</h2>
 
                     <br>
 
                     <!-- * Phone Number -->
-                    <h4><a href="tel:226-260-2927" class="phonenumber">226-260-2927</a></h4>
+                    <h4><a href="tel:519-944-1315" class="phonenumber">519-944-1315 (Central Windsor)</a></h4>
+                    <br>
+                    <h4><a href="tel:519-979-0280" class="phonenumber">519-979-0280 (Riverside)</a></h4>
 
                     <br>
                     <!-- * Website Link -->
                     <div class="businessLinkPic">
-                        <img src="/images/website_logo.png" class="linkLogos" />
+                        <img src="/images/facebook-logo.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://mtc.janeapp.com" target="_blank" rel="noopener noreferrer"
-                                    class="businessLinks">MT Clinic Website</a></p>
+                            <p id="informationTextLinks"><a href="https://www.facebook.com/thebarbersin/" target="_blank" rel="noopener noreferrer"
+                                    class="businessLinks">The Barber's In Facebook</a></p>
                         </div>
                     </div>
 
@@ -95,54 +90,49 @@
                     <div class="businessLinkPic">
                         <img src="/images/instagramlogo.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://www.instagram.com/nwagner.rmt/" target="_blank"
-                                    rel="noopener noreferrer" class="businessLinks">@nwagner.rmt</a></p>
-                        </div>
-                    </div>
-                    <br>
-                    <!-- * Instagram Section -->
-                    <div class="businessLinkPic">
-                        <img src="/images/instagramlogo.png" class="linkLogos" />
-                        <div class="businessLinkText">
-                            <p id="informationTextLinks"><a href="https://www.instagram.com/themtclinic/" target="_blank"
-                                    rel="noopener noreferrer" class="businessLinks">@themtclinic</a></p>
+                            <p id="informationTextLinks"><a href="https://www.instagram.com/thebarbersinwindsor/" target="_blank"
+                                    rel="noopener noreferrer" class="businessLinks">@thebarbersinwindsor</a></p>
                         </div>
                     </div>
 
                     <br>
-                    <!-- * Email button -->
-                    <div businessLinkPic>
-                        <img src="/images/email-icon.png" class="linkLogosPage" />
+                    <br>
+                   <!-- * Business Address -->
+                   <h3>Central Windsor Location</h3>
+                   <div class="businessLinkPic">
+                        <img src="/images/pin-icon.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <a href="mailto:nwagnerrmt@gmail.com" class="businessLinks"><p id="informationTextLinks">Email Manual Therapy Clinic</p></a>
+                            <p><a href="https://goo.gl/maps/ns5usAMKJcYpDpw5A"
+                                    target="_blank" rel="noopener noreferrer" class="businessLinks">5124 Tecumseh Rd E, Windsor, ON N8T 1C1</a></p>
                         </div>
                     </div>
-
+                    <!-- * Google maps embedded map -->
+                    <div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47210.599260021816!2d-83.00867585808626!3d42.30706738553974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2b1055f62553%3A0xb1a5da190e5d10ec!2sBarber&#39;s%20In!5e0!3m2!1sen!2sca!4v1641493175499!5m2!1sen!2sca" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
                     <br>
-                    <!-- * Business Address -->
+                    <!-- * Business Address 2 -->
+                    <h3>Riverside Location</h3>
                     <div class="businessLinkPic">
                         <img src="/images/pin-icon.png" class="linkLogos" />
                         <div class="businessLinkText">
-                            <a href="https://goo.gl/maps/US8QV5Un6o9F94RF9"
-                                target="_blank" rel="noopener noreferrer" class="businessLinks">
-                                <p id="informationTextLinks">1236 Tecumseh Rd E, Windsor ON, N8W 1B8</p>
-                            </a>
+                            <p><a href="https://goo.gl/maps/GRQ4FBNfdvJqVmZT7"
+                                    target="_blank" rel="noopener noreferrer" class="businessLinks">12325 Riverside Dr E, Windsor, ON N8N 1A3</a></p>
                         </div>
                     </div>
 
-                    <br><br>
-
-                    <!-- * Google maps embedded map -->
                     <div>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.988050317444!2d-83.00803438070346!3d42.30012040226445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2dea5459de3d%3A0x6e455a62b73c6b8!2sManual%20Therapy%20Clinic!5e0!3m2!1sen!2sca!4v1640657761775!5m2!1sen!2sca" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47210.599260021816!2d-83.00867585808626!3d42.30706738553974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88252ab49f6dd609%3A0x2914fe8376c6bfad!2sThe%20Barber&#39;s%20In!5e0!3m2!1sen!2sca!4v1641493247000!5m2!1sen!2sca" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
-
                     <br>
 
                     <!-- * Hours and information -->
                     <h1>Hours</h1>
+                    <h3>Both Locations</h3>
                     <p id="informationTextLinks">
-                        <b>Please check the website link above for times.</b>
+                        Sunday: <b>Closed</b>
+                        <br>
+                        Monday - Saturday: <b>9am to 6pm</b>
                     </p>
 
                 </div>
