--- a/public/discover.html
+++ b/public/discover.html
@@ -75,7 +75,7 @@
                 <button class="btn btn-secondary category-button filter-button" data-filter="restaurant">Restaurant</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="food">Food (Other)</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="bar">Bar</button>
-                <button class="btn btn-secondary category-button filter-button" data-filter="healthandwellness">Health & Wellness</button>
+                <button class="btn btn-secondary category-button filter-button" data-filter="healthandbeauty">Health & Beauty</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="shopping">Shopping</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="accessories">Accessories</button>
                 <button class="btn btn-secondary category-button filter-button" data-filter="events">Events</button>
@@ -98,8 +98,8 @@
                 <input type="radio" class="btn-check" name="options" id="bar" autocomplete="off">
                 <label class="btn btn-secondary category-button filter-button" for="bar" data-filter="bar">Bar</label>
 
-                <input type="radio" class="btn-check" name="options" id="healthandwellness" autocomplete="off">
-                <label class="btn btn-secondary category-button filter-button" for="healthandwellness" data-filter="healthandwellness">Health & Wellness</label>
+                <input type="radio" class="btn-check" name="options" id="healthandbeauty" autocomplete="off">
+                <label class="btn btn-secondary category-button filter-button" for="healthandbeauty" data-filter="healthandbeauty">Health & Beauty</label>
 
                 <input type="radio" class="btn-check" name="options" id="shopping" autocomplete="off">
                 <label class="btn btn-secondary category-button filter-button" for="shopping" data-filter="shopping">Shopping</label>
@@ -139,7 +139,7 @@
                             <p class="filter restaurant italian mexican chinese fastfood none-button">Restaurant</p>
                             <p class="filter food sauces cafe deli grocerystore none-button">Food (Other)</p>
                             <p class="filter bar sportsbar casual highend danceclub none-button">Bar</p>
-                            <p class="filter healthandwellness massagetherapy nails eyebrows eyelashes none-button">Health & Wellness</p>
+                            <p class="filter healthandbeauty massagetherapy barbershop hairsalon nails eyebrows eyelashes none-button">Health & Beauty</p>
                             <p class="filter shopping art clothing shoes usedgoods none-button">Shopping</p>
                             <p class="filter accessories gifts jewelry none-button">Accessories</p>
                             <p class="filter events weddings none-button">Events</p>
@@ -158,7 +158,7 @@
                                 <button class="btn btn-secondary category-button filter-button none-button filter restaurant italian mexican chinese fastfood" data-filter="restaurant">None</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter food cafe deli sauces grocerystore" data-filter="food">None</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter bar sportsbar casual highend danceclub" data-filter="bar">None</button>
-                                <button class="btn btn-secondary category-button filter-button none-button filter healthandwellness massagetherapy nails eyebrows eyelashes" data-filter="healthandwellness">None</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter healthandbeauty barbershop hairsalon massagetherapy nails eyebrows eyelashes" data-filter="healthandbeauty">None</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter shopping art clothing shoes usedgoods" data-filter="shopping">None</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter accessories gifts jewelry" data-filter="accessories">None</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter events weddings" data-filter="events">None</button>
@@ -188,11 +188,13 @@
                                 <button class="btn btn-secondary category-button filter-button none-button filter bar sportsbar casual highend danceclub" data-filter="highend">High End/Formal</button>
                                 <button class="btn btn-secondary category-button filter-button none-button filter bar sportsbar casual highend danceclub" data-filter="danceclub">Dance/Club</button>
 
-                                <!-- ! Health & Wellness Subcategories -->
-                                <button class="btn btn-secondary category-button filter-button none-button filter healthandwellness massagetherapy nails eyebrows eyelashes" data-filter="massagetherapy">Massage Therapy</button>
-                                <button class="btn btn-secondary category-button filter-button none-button filter healthandwellness massagetherapy nails eyebrows eyelashes" data-filter="nails">Nails</button>
-                                <button class="btn btn-secondary category-button filter-button none-button filter healthandwellness massagetherapy nails eyebrows eyelashes" data-filter="eyebrows">Eyebrows</button>
-                                <button class="btn btn-secondary category-button filter-button none-button filter healthandwellness massagetherapy nails eyebrows eyelashes" data-filter="eyelashes">Eyelashes</button>
+                                <!-- ! Health & Beauty Subcategories -->
+                                <button class="btn btn-secondary category-button filter-button none-button filter healthandbeauty barbershop hairsalon massagetherapy nails eyebrows eyelashes" data-filter="massagetherapy">Massage Therapy</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter healthandbeauty barbershop hairsalon massagetherapy nails eyebrows eyelashes" data-filter="nails">Nails</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter healthandbeauty barbershop hairsalon massagetherapy nails eyebrows eyelashes" data-filter="eyebrows">Eyebrows</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter healthandbeauty barbershop hairsalon massagetherapy nails eyebrows eyelashes" data-filter="eyelashes">Eyelashes</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter healthandbeauty barbershop hairsalon massagetherapy nails eyebrows eyelashes" data-filter="barbershop">Barber Shop</button>
+                                <button class="btn btn-secondary category-button filter-button none-button filter healthandbeauty barbershop hairsalon massagetherapy nails eyebrows eyelashes" data-filter="hairsalon">Hair Salon</button>
 
                                 <!-- ! Shopping Subcategories -->
                                 <button class="btn btn-secondary category-button filter-button none-button filter shopping art clothing shoes usedgoods" data-filter="art">Art</button>
@@ -422,7 +424,76 @@
                     </div>
                     <br>
                 </div>
-                <!-- ! END of BUSINESS NAME HERE -->
+                <!-- ! END of The Cutting Board Deli -->
+
+                <!-- ! START of The Barber's In -->
+                <div class="col-md-4 border-bottom border-2 item filter healthandbeauty barbershop recentlyadded">
+                    <!-- * Basic Info -->
+                    <a href="/public/businessPages/thebarbersin.html" class="businessHeaderLink"><h1>The Barber's In</h1></a>
+                    <h3>Health & Beauty</h3>
+                    <h4>Barber Shop</h4>
+                    <img class="business_image" src="/images/defaultpicture.jpg" />
+                    <br>
+
+                    <h5><a href="tel:519-944-1315" class="phonenumber">519-944-1315 (Central Windsor)</a></h5>
+                    <h5><a href="tel:519-979-0280" class="phonenumber">519-979-0280 (Riverside)</a></h5>
+                    
+                    <!-- * Website Link -->
+                    <div class="businessLinkPic">
+                        <img src="/images/facebook-logo.png" class="linkLogos" />
+                        <div class="businessLinkText">
+                            <p><a href="https://www.facebook.com/thebarbersin/" target="_blank" rel="noopener noreferrer"
+                                    class="businessLinks">Facebook</a></p>
+                        </div>
+                    </div>
+                    <br>
+
+                    <!-- * Instagram Section -->
+                    <div class="businessLinkPic">
+                        <img src="/images/instagramlogo.png" class="linkLogos" />
+                        <div class="businessLinkText">
+                            <p><a href="https://www.instagram.com/thebarbersinwindsor/" target="_blank"
+                                    rel="noopener noreferrer" class="businessLinks">@thebarbersinwindsor</a></p>
+                        </div>
+                    </div>
+                    <br>
+
+                    <!-- * Business Address -->
+                    <div class="businessLinkPic">
+                        <img src="/images/pin-icon.png" class="linkLogos" />
+                        <div class="businessLinkText">
+                            <p><a href="https://goo.gl/maps/ns5usAMKJcYpDpw5A"
+                                    target="_blank" rel="noopener noreferrer" class="businessLinks">5124 Tecumseh Rd E, Windsor, ON N8T 1C1</a></p>
+                        </div>
+                    </div>
+                    <!-- * Business Address 2 -->
+                    <div class="businessLinkPic">
+                        <img src="/images/pin-icon.png" class="linkLogos" />
+                        <div class="businessLinkText">
+                            <p><a href="https://goo.gl/maps/GRQ4FBNfdvJqVmZT7"
+                                    target="_blank" rel="noopener noreferrer" class="businessLinks">12325 Riverside Dr E, Windsor, ON N8N 1A3</a></p>
+                        </div>
+                    </div>
+
+                    <!-- * Description Collapse Button -->
+                    <div class="collapseButtonSection">
+                        <button class="btn btn-primary collapseButton" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#thebarbersinwindsor" aria-expanded="false" aria-controls="thebarbersinwindsor">
+                            Hours
+                        </button>
+                        <div class="collapse" id="thebarbersinwindsor">
+                            <div class="card card-body">
+                                <p>
+                                    Sunday: <b>Closed</b>
+                                    <br>
+                                    Monday - Saturday: <b>9am to 6pm</b>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                </div>
+                <!-- ! END of The Barber's In -->
 
                 <!-- ! START of Bella Armande Jewelry -->
                 <div class="col-md-4 border-bottom border-2 item filter accessories recentlyadded jewelry">
@@ -546,10 +617,10 @@
                 <!-- ! END of Threedee Lab -->
 
                 <!-- ! START of Manual Therapy Clinic -->
-                <div class="col-md-4 border-bottom border-2 item filter recentlyadded healthandwellness massagetherapy">
+                <div class="col-md-4 border-bottom border-2 item filter recentlyadded healthandbeauty massagetherapy">
                     <!-- * Basic Info -->
                     <a href="/public/businessPages/manualtherapyclinic.html" class="businessHeaderLink"><h1>Manual Therapy Clinic</h1></a>
-                    <h3>Health & Wellness</h3>
+                    <h3>Health & Beauty</h3>
                     <h4>Massage Therapy</h4>
                     <img class="business_image" src="/images/defaultpicture.jpg" />
                     <br>
