updated the cutting board deli profile picture

--- a/public/businessPages/thecuttingboardeli.html
+++ b/public/businessPages/thecuttingboardeli.html
@@ -50,7 +50,7 @@
     <div class="jumbotron">
         <h1>The Cutting Board Deli</h1>
         <br>
-        <img class="business_image" src="/images/defaultpicture.jpg" />
+        <img class="business_image" src="/images/thecuttingboarddeli.jpg" />
         <!-- 
         <br><br>
         <a href="/discover.html" class="backToDiscoverLink"><p> < Back to Discover Page</p></a> -->
