--- a/public/discover.html
+++ b/public/discover.html
@@ -369,7 +369,7 @@
                     <a href="/public/businessPages/thecuttingboardeli.html" class="businessHeaderLink"><h1>The Cutting Board Deli</h1></a>
                     <h3>Food</h3>
                     <h4>Deli</h4>
-                    <img class="business_image" src="/images/defaultpicture.jpg" />
+                    <img class="business_image" src="/images/thecuttingboarddeli.jpg" />
                     <br>
 
                     <h5><a href="tel:519-979-4406" class="phonenumber">519-979-4406</a></h5>
