--- a/public/contactformsuccessfullysubmitted.html
+++ b/public/contactformsuccessfullysubmitted.html
@@ -59,14 +59,14 @@
                     <div class="block-text">
                         <p>
                             Thank you for your interest in Wertigo. We will get back to you as soon as possible!
-                            <br><br>In the meantime, click the buttons below to go back to the Contact Us page or the to the other pages:
+                            <br><br>In the meantime, click the buttons below to Discover other local businesses or go to the other pages:
                         </p>
                     </div>
-                    <a href="contactus.html"><button type="button" class="btn btn-success" id="successButton">Contact Us</button></a>
+                    <a href="discover.html"><button type="button" class="btn btn-success" id="successButton">Discover</button></a>
                     <br><br>
                     <a href="index.html"><button type="button" class="btn btn-primary" id="successButton">Home</button></a>
-                    
-                    <a href="discover.html"><button type="button" class="btn btn-primary" id="successButton">Discover</button></a>
+
+                    <a href="contactus.html"><button type="button" class="btn btn-primary" id="successButton">Contact Us</button></a>
                     
                     <a href="faq.html"><button type="button" class="btn btn-primary" id="successButton">FAQ</button></a>
                 </div>
