changed faq page back to normal

--- a/public/faq.html
+++ b/public/faq.html
@@ -103,7 +103,7 @@
                     <h1>Can I edit or remove my business from Wertigo?</h1>
                     <div class="block-text">
                         <p>Also of course! If you wish to edit any details or remove your business from Wertigo, simply
-                            fill out the first form on the <a href="contactus.html">Contact Us</a> page or email us <a href="mailto:wertigosupport@gmail.com">here.</a> TESTING 123</p>
+                            fill out the first form on the <a href="contactus.html">Contact Us</a> page or email us <a href="mailto:wertigosupport@gmail.com">here.</a></p>
                     </div>
                 </div>
             </div>
