added google analytics script inside of head tag in index.html

--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -31,6 +31,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CEWQK78EPM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CEWQK78EPM');
+    </script>
+
     <title>Wertigo</title>
   </head>
   <body>
